Add a crawler for orphaned prekey pages